--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "prop-types": "^15.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
