--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
+    "prop-types": "^15.6.1",
+    "ra-data-graphql": "^4.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4",
-    "prop-types": "^15.6.1"
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
