--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "crypto-js": "^4.1.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "prop-types": "^15.6.1",
